# jankenoboe

./: .clinerules  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  install.sh  release.md  uninstall.sh
archived_tasks/: 2026-02-17_skills_update_cli_only.md  2026-02-18_cli_implementation.md  2026-02-19_e2e_and_uninstall.md  2026-02-20_import_rules_correction.md  2026-02-22_learning_due_offset.md  2026-02-22_search_refactor.md  2026-02-23_learning_by_song_ids.md  2026-02-23_shows_by_artist_ids.md  2026-02-23_songs_by_artist_ids.md  2026-02-24_html_template_decoupling.md  2026-02-24_querying_jankensqlhub_migration.md  2026-02-28_docs_skills_consolidation.md  2026-02-28_import_romaji_backfill.md  2026-02-28_review_html_copy_ids.md  2026-02-28_song_stats_play_count.md  2026-03-02_initialize_skill_and_docs_reorg.md  2026-03-09_batch_get_command.md  2026-03-09_graduate_ids_command.md  2026-03-09_import_missing_resolved_ids.md  2026-03-17_display_level_field.md  2026-03-17_import_namesake_disambiguation.md  2026-03-17_import_skill_simplification.md  2026-03-17_review_play_history_shows.md
docs/: amq_song_export-sample.json  api.md  cli-data-management.md  cli-learning.md  cli-querying.md  cli.md  concept.md  development.md  import.md  init-db.sql  structure.md
e2e/: Dockerfile  run_tests.sh
src/: commands.rs  db.rs  easing.rs  encoding.rs  err.rs  error.rs  handlers.rs  import_check.rs  learning.rs  lib.rs  main.rs  models.rs  store_handlers.rs  summary.rs  table_config.rs  utils.rs
templates/: learning-song-review.html
tests/: test_cli.rs  test_data_management.rs  test_learning.rs  (+1 more)
(+49 files in other folders)
