[package]
name = "jankenoboe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
jankenstore = "0.9.1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["full"] }
hyper = { version = "1.6", features = ["full"] }
rusqlite = "0.33"
