[package]
name = "jankenoboe"
version = "2.4.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
jankensqlhub = { version = "1.3.0", features = ["sqlite"] }
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
